# oracle

./: .gitignore  README.md  env.example  enviroment.yml  generate_card.py  pyproject.toml
example_input/: dark_matter.fasta  hypothetical.fasta  strong_hit.fasta
example_output/: Ga0531459_000428_12414_11821_6_20260525_184209.report.json  Ga0531459_000428_12414_11821_6_20260525_184209.report.txt  Ga0531459_000429_2805_3143_5_20260525_182650.report.json  Ga0531459_000429_2805_3143_5_20260525_182650.report.txt  sp_Q38087_DPOL_BPR69_20260525_181107.report.json  sp_Q38087_DPOL_BPR69_20260525_181107.report.txt
example_output/protein_cards/: Ga0531459_000428_12414_11821_6_20260525_184209.card.html  Ga0531459_000429_2805_3143_5_20260525_182650.card.html
oracle/: main.py  models.py
oracle/agent/: oracle.py  prompts.py
oracle/tools/: base.py  blast.py  composition.py  hmmer.py  registry.py  structure.py
oracle/utils/: report.py
tests/: mock.py  test_esmfold_api.py  test_hmmer_api.py  test_rcsb_api.py
